tests/fail/fail_types2.bb
<> Should fail with type error.

int x
float y
int z

x = 5
y = 7.0
z = x + y
